[gd_scene load_steps=2 format=3 uid="uid://bknate8rity16"]

[ext_resource type="Script" path="res://scripts/Narrator.gd" id="1"]

[node name="Narrator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="dialogue" type="Label" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 422.0
offset_right = -10.0
offset_bottom = -1.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
